<resources>
    <string name="app_name">Nifty Second-Hand Shop</string>
    <string name="sellButton">Sell something</string>
    <string name="buyButton">Buy</string>
    <string name="cameraButton">Sell</string>
    <string name="homeButton">Home</string>
    <string name="browseButton">Browse</string>
    <string name="welcomeText">Grab the deals while they last!</string>
    <string name="ratingText">Rate this app:</string>
    <string name="homeMenu">Home</string>
    <string name="sellMenu">Sell your items</string>
    <string name="browseMenu">Browse items for sale</string>
    <string name="title_activity_browse">Browse</string>
    <string name="title_activity_sell">Sell</string>
    <string name="advertTitle">Title:</string>
    <string name="advertPrice">Price(€):</string>
    <string name="productPrice">Price:</string>
    <string name="euroSign">€</string>
    <string name="priceManualHint">Or enter manually</string>
    <string name="advertLocation">County:</string>
    <string name="advertDetails">Details:</string>
    <string name="advertImage">productImage</string>
    <string name="submitButton">Submit</string>
    <string name="photoButton">Add Photo</string>
    <string name="row_image_contentDesc">productImage</string>
    <string name="browseEmptyDefaultText">No adverts yet.\nAdd new adverts by using SELL menu to see them displayed here!</string>
    <string-array name="locations">
        <item>Tramore</item>
        <item>Waterford</item>
        <item>Dunmore East</item>
        <item>Fenor</item>
    </string-array>
    <string-array name="clothingSizes">
        <item>X-Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>
    <string name="title_activity_advert_clothing">Sell clothes</string>
    <string name="title_activity_advert_fashion">Sell fashion</string>
    <string name="advertType">Type:</string>
    <string name="advertSize">Size:</string>
    <string name="clothing_radioButton">Clothing</string>
    <string name="shoes_radioButton">Shoes</string>
    <string name="generalAd_radioB">General</string>
    <string name="fashionAd_radioB">Fashion</string>
    <string name="carAd_radioB">Car</string>
    <string name="title_activity_advert_car">Sell cars</string>
    <string name="advertMake">Make:</string>
    <string name="advertModel">Model:</string>
    <string name="advertYear">Year:</string>
    <string name="emptyAdvertsCategory">No adverts in this category.</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Create a username</string>
    <string name="enter_password">Choose a password</string>
    <string name="user_login">User Login</string>
    <string name="button_login">Log in</string>
    <string name="button_register">Sign me up!</string>
    <string name="logout">Log out</string>
    <string name="githubTextView">Visit my GitHub page:</string>
    <string name="reset">Delete all ads</string>
    <string-array name="carMakes">
        <item>Honda</item>
        <item>Toyota</item>
        <item>BMW</item>
        <item>Mercedes-Benz</item>
        <item>Volkswagen</item>
        <item>Renault</item>
        <item>Audi</item>
        <item>Ford</item>
        <item>Porsche</item>
        <item>Volvo</item>
        <item>Chrysler</item>
        <item>Land Rover</item>
        <item>Jeep</item>
        <item>Jaguar</item>
        <item>Mazda</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>GMC</item>
        <item>Chevrolet</item>
        <item>Seat</item>
        <item>Lotus</item>
        <item>Lamborghini</item>
        <item>Ferrari</item>
        <item>Aston Martin</item>
        <item>Dodge</item>
        <item>Yamaha</item>
        <item>Infiniti</item>
        <item>Opel</item>
        <item>Kia</item>
    </string-array>
    <string-array name="counties">
        <item>Antrim</item>
        <item>Armagh</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Fermanagh</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Tyrone</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>
    <string name="title_activity_view_advert">Advert View</string>
    <string name="buttonUpdate">UPDATE</string>
    <string name="buttonDelete">DELETE</string>
    <string name="title_activity_view_advert_fashion">Fashion Advert View</string>
    <string name="buttonSave">SAVE</string>
    <string name="searchText">Search here</string>
    <string name="googleButton">Log in with Google</string>
    <string name="enter_county">Enter county</string>
    <string name="advertCounty">County:</string>
    <string name="title_activity_view_advert_car">Car Advert View</string>
    <string name="loading_advert_data">Loading data for adverts&#8230;</string>
    <string name="browse_sections">BROWSE SECTIONS:</string>


</resources>
