<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/row_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/row_image_contentDesc" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/row_image"
        android:text="@string/advertTitle"
        android:textStyle="bold" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/row_title"
        android:layout_toEndOf="@id/row_image"
        android:layout_below="@id/tv_title"
        android:layout_alignStart="@id/tv_title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/row_title"
        android:text="@string/productPrice"
        android:textStyle="bold" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/row_price"
        android:layout_toEndOf="@id/row_title"
        android:layout_below="@id/tv_price"
        android:layout_alignStart="@id/tv_price"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/row_price"
        android:text="@string/advertLocation"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/row_location"
        android:layout_toEndOf="@id/row_price"
        android:layout_below="@id/tv_location"
        android:layout_alignStart="@id/tv_location"
        android:layout_marginTop="5dp" />

</RelativeLayout>